k8s/auth-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: wstemplate
spec:
  type: ClusterIP
  selector:
    component: auth-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: wstemplate
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth-service
  template:
    metadata:
      labels:
        component: auth-service
    spec:
      containers:
      - name: auth-service
        image: docker-registry:5000/wstemplate-template-auth-service:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
