k8s/ldap-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap
  namespace: wstemplate
spec:
  type: NodePort
  selector:
    component: ldap
  ports:
    - port: 10389
      targetPort: http
      protocol: TCP
      nodePort: 31901
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap
  namespace: wstemplate
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ldap
  template:
    metadata:
      labels:
        component: ldap
    spec:
      containers:
        - name: ldap
          image: petyaba/ldap
          ports:
            - name: http
              containerPort: 10389
              protocol: TCP
