k8s/scalable-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalable-service
  namespace: wstemplate
  labels:
    monitored: prometheus
spec:
  type: ClusterIP
  selector:
    component: scalable-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalable-service
  namespace: wstemplate
spec:
  replicas: 3
  selector:
    matchLabels:
      component: scalable-service
  template:
    metadata:
      labels:
        component: scalable-service
    spec:
      containers:
      - name: scalable-service
        image: docker-registry:5000/wstemplate-template-scalable-service:1.0.6-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
