k8s/auth-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  namespace: wstemplate
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - auth-service.wstemplate.k8s-test.perit.local
      secretName: wstemplate-tls
  rules:
  - host: auth-service.wstemplate.k8s-test.perit.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              name: http
