k8s/scalable-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scalable-service-ingress
  namespace: wstemplate
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - scalable-service.wstemplate.k8s-test.perit.hu
      secretName: templatekey
  rules:
  - host: scalable-service.wstemplate.k8s-test.perit.hu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scalable-service
            port:
              name: http
